--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -63,6 +63,8 @@
     <color name="floatingActionbtncolorStart">#4527A0</color>
     <color name="floatingActionbtncolorEnd">#456289</color>
 
+    <color name="stausbarsinglepv">#00000000</color>
+
 
     <color name="ripple_color">#80FFFFFF</color> <!-- White ripple with 50% opacity -->
     <color name="ripple_color_for_blue">#33FFFFFF</color> <!-- White ripple with 50% opacity -->
