--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -129,4 +129,13 @@
     </style>
 
 
+
+    <style name="Theme.animation_style" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+
+    </style>
+
+
 </resources>
