--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -30,12 +30,12 @@
             android:id="@+id/main_toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Setting"
-            android:layout_toEndOf="@+id/setting_main_toolbar_back_arrow"
-            android:textColor="#fff"
-            android:padding="5dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="14dp"
+            android:layout_toEndOf="@+id/setting_main_toolbar_back_arrow"
+            android:padding="5dp"
+            android:text="Setting"
+            android:textColor="#fff"
             android:textSize="20sp" />
 
 
@@ -64,8 +64,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="12dp"
                 app:cardBackgroundColor="@color/TertiaryPrimarycolor"
-                app:cardCornerRadius="20dp"
-                >
+                app:cardCornerRadius="20dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -75,26 +74,24 @@
                         android:id="@+id/setting_forgot_hint"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
+                        android:layout_centerVertical="true"
                         android:padding="5dp"
-                        android:src="@drawable/idea_bulb"
-                        android:layout_centerVertical="true"/>
+                        android:src="@drawable/idea_bulb" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_toRightOf="@id/setting_forgot_hint"
                         android:layout_margin="5dp"
+                        android:layout_toRightOf="@id/setting_forgot_hint"
                         android:padding="5dp"
                         android:text="If forget Password type 123123123 for Reset Password"
-                        android:textSize="20sp"
-                        android:textColor="@color/limeclr"/>
-
+                        android:textColor="@color/limeclr"
+                        android:textSize="20sp" />
 
 
                 </RelativeLayout>
 
             </androidx.cardview.widget.CardView>
-
 
 
             <TextView
@@ -124,27 +121,26 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/tvChangePass"
+                        android:id="@+id/settingChangePass"
+                        style="@style/settingItem"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingStart="30dp"
-                        android:textColor="@color/white"
                         android:text="Change Password"
-
-                    style="@style/settingItem" />
+                        android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/tvChangeSecureQuestion"
+                        android:id="@+id/settinggChangeSecureQuestion"
+                        style="@style/settingItem"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingStart="30dp"
                         android:layout_marginBottom="4dp"
-                        android:textColor="@color/white"
-                        android:text="Change Security Question"
+                        android:clickable="true"
+                        android:focusable="true"
                         android:foreground="?attr/selectableItemBackground"
-                    android:clickable="true"
-                    android:focusable="true"
-                    style="@style/settingItem" />
+                        android:paddingStart="30dp"
+                        android:text="Change Security Question"
+                        android:textColor="@color/white" />
 
 
                 </LinearLayout>
@@ -181,41 +177,46 @@
                     android:orientation="vertical">
 
 
-
                     <TextView
-                        android:id="@+id/tvRate"
+                        android:id="@+id/settingRate"
                         style="@style/settingItem"
-                        android:textColor="@color/white"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingStart="30dp"
-                        android:text="Rate Us" />
-
-
-
-
-                    <TextView
-                        android:id="@+id/tvShare"
-                        style="@style/settingItem"
-                        android:textColor="@color/white"
-                        android:layout_width="match_parent"
-                        android:paddingStart="30dp"
-                        android:layout_height="wrap_content"
-                        android:text="share_to_friend" />
-
-
-
+                        android:text="Rate Us"
+                        android:textColor="@color/white" />
 
 
                     <TextView
-                        android:id="@+id/tvPolicy"
+                        android:id="@+id/settingShare"
                         style="@style/settingItem"
-                        android:textColor="@color/white"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingStart="30dp"
+                        android:text="share_to_friend"
+                        android:textColor="@color/white" />
+
+
+                    <TextView
+                        android:id="@+id/settingPolicy"
+                        style="@style/settingItem"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
-                        android:text="policy" />
+                        android:paddingStart="30dp"
+                        android:text="Privacy policy"
+                        android:textColor="@color/white" />
+
+                    <TextView
+                        android:id="@+id/settingabout"
+                        style="@style/settingItem"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:paddingStart="30dp"
+                        android:text="About"
+                        android:textColor="@color/white" />
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
