--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.FinalCalciHide" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
-
-
 
     <style name="Theme.status_bar_clr" parent="Base.Theme.FinalCalciHide">
 
@@ -25,11 +23,119 @@
 
     </style>
 
-
     <style name="Theme.FullScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
 
     </style>
 
+    <style name="Theme.FinalCalciHide" parent="Base.Theme.FinalCalciHide" />
+
+
+
+
+
+    <style name="digitBtn" parent="commonBtn">
+
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@drawable/ripple_effect</item>
+        <item name="android:elevation">0dp</item>
+
+    </style>
+
+
+    <style name="operatorbtn" parent="commonBtn">
+
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/calciDisplay</item>
+
+    </style>
+
+    <style name="operatorbtnequal" parent="commonBtn">
+
+        <item name="android:textColor">@color/white</item>
+        <!--        <item name="backgroundTint">@drawable/background_fab</item>-->
+        <!--        <item name="backgroundTint"/>#AAFFFFFF</item> &lt;!&ndash; Optional color tint &ndash;&gt;-->
+
+        <item name="android:background">@drawable/button_background_fab</item> <!-- Use the layered drawable -->
+
+
+    </style>
+
+    <style name="commonBtn" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
+
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="cornerRadius">50dp</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:layout_margin">6dp</item>
+        <item name="backgroundTint">#282830</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:background">@drawable/ripple_effect</item>
+        <item name="layout_constraintDimensionRatio">"1.3:1"</item>
+
+    </style>
+
+
+
+    <style name="settingItem" parent="MaterialAlertDialog.Material3.Body.Text">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/Black</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/setting_ripple_ori</item>
+    </style>
+
+
+
+
+    <style name="RatingBarStyle" parent="Widget.AppCompat.RatingBar">
+        <!--        color of non selected star-->
+        <item name="colorControlNormal">@color/limeclr</item>
+
+        <!--        color of selected star-->
+        <item name="colorControlActivated">@color/btnbackground2</item>
+
+        <item name="android:progressDrawable">@drawable/custom_ratingbar</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:maxHeight">48dp</item>
+    </style>
+
+
+
+    <style name="UnicornFilePickert.Mytheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryDark">@color/FinalPrimaryColor</item>
+        <item name="colorAccent">@color/white</item>
+
+        <item name="android:statusBarColor">@color/FinalPrimaryColor</item>
+        <item name="android:windowBackground">@color/white</item>
+        <item name="android:navigationBarColor">@color/FinalPrimaryColor</item>
+
+        <!-- textColorPrimary is for toolbar title text  -->
+        <item name="android:textColorPrimary">@color/white</item>
+
+        <!-- textColorSecondary is for toolbar action icons tint-->
+        <item name="android:textColorSecondary">@color/white</item>
+
+        <item name="unicorn.colorAccent">@color/floatingActionbtncolorStart</item>
+        <item name="unicorn.fabColor">@color/floatingActionbtncolorStart</item>
+        <item name="unicorn.background">@color/FinalPrimaryColor</item>
+        <item name="unicorn.secondaryTextColor">@color/white</item>
+        <item name="unicorn.primaryTextColor">@color/white</item>
+        <item name="unicorn.file.heading">@color/white</item>
+        <item name="unicorn.file.subHeading">@color/white</item>
+        <item name="unicorn.file.iconTint">@color/white</item>
+        <item name="unicorn.file.arrowIconTint">@color/unicorn_white</item>
+        <item name="unicorn.file.selectionTint">@color/SecondPrimaryColor</item>
+    </style>
+
+
+
+    <style name="Theme.animation_style" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+        <item name="android:background">@color/colorPrimaryDark</item>
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+
+    </style>
 
 
 </resources>
