--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -134,6 +134,7 @@
 
         <item name="android:background">@color/colorPrimaryDark</item>
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+        <item name="statusBarBackground">@color/colorPrimaryDark</item>
 
     </style>
 
