--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -193,7 +193,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingStart="30dp"
-                        android:text="share_to_friend"
+                        android:text="Share App"
                         android:textColor="@color/white" />
 
 
