--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,11 +2,15 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.FinalCalciHide" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="colorPrimary">@color/blue</item>    <!-- Default color for button    -->
+        <item name="colorPrimaryDark">@color/FinalPrimaryColor
+        </item>  <!-- Default color of status bar -->
+
     </style>
 
-    <style name="Theme.status_bar_clr" parent="Base.Theme.FinalCalciHide">
 
+    <style name="Theme.status_bar_clr" parent="Base.Theme.FinalCalciHide">
 
         <!--        <item name="android:windowTranslucentStatus">true</item>-->
         <item name="android:windowFullscreen">false</item>
@@ -16,20 +20,10 @@
         <item name="android:statusBarColor">@color/status_bar</item>
         <item name="android:windowLightStatusBar">false</item> <!-- For light icons -->
 
-
         <!--        <item name="android:colorPrimary">@color/status_bar</item>-->
         <item name="colorPrimaryDark">@color/status_bar</item>
 
-
     </style>
-
-    <style name="Theme.FullScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-
-
-    </style>
-
-    <style name="Theme.FinalCalciHide" parent="Base.Theme.FinalCalciHide" />
-
 
 
 
@@ -41,7 +35,6 @@
         <item name="android:elevation">0dp</item>
 
     </style>
-
 
     <style name="operatorbtn" parent="commonBtn">
 
@@ -56,8 +49,8 @@
         <!--        <item name="backgroundTint">@drawable/background_fab</item>-->
         <!--        <item name="backgroundTint"/>#AAFFFFFF</item> &lt;!&ndash; Optional color tint &ndash;&gt;-->
 
-        <item name="android:background">@drawable/button_background_fab</item> <!-- Use the layered drawable -->
-
+        <item name="android:background">@drawable/button_background_fab
+        </item> <!-- Use the layered drawable -->
 
     </style>
 
@@ -76,15 +69,12 @@
     </style>
 
 
-
     <style name="settingItem" parent="MaterialAlertDialog.Material3.Body.Text">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/Black</item>
         <item name="android:padding">10dp</item>
         <item name="android:background">@drawable/setting_ripple_ori</item>
     </style>
-
-
 
 
     <style name="RatingBarStyle" parent="Widget.AppCompat.RatingBar">
@@ -98,7 +88,6 @@
         <item name="android:minHeight">48dp</item>
         <item name="android:maxHeight">48dp</item>
     </style>
-
 
 
     <style name="UnicornFilePickert.Mytheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -127,7 +116,6 @@
         <item name="unicorn.file.arrowIconTint">@color/unicorn_white</item>
         <item name="unicorn.file.selectionTint">@color/SecondPrimaryColor</item>
     </style>
-
 
 
     <style name="Theme.animation_style" parent="Theme.MaterialComponents.DayNight.NoActionBar">
