--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,13 @@
     <style name="Base.Theme.FinalCalciHide" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="colorPrimary">@color/blue</item>    <!-- Default color for button    -->
+        <item name="colorPrimaryDark">@color/FinalPrimaryColor</item>  <!-- Default color of status bar -->
+
+
     </style>
+
 
     <style name="Theme.status_bar_clr" parent="Base.Theme.FinalCalciHide">
 
@@ -23,15 +29,10 @@
 
     </style>
 
-<style name="Theme.FullScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.FullScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
 
-</style>
-
-    <style name="Theme.FinalCalciHide" parent="Base.Theme.FinalCalciHide" />
-
-
-
+    </style>
 
 
     <style name="digitBtn" parent="commonBtn">
@@ -53,10 +54,11 @@
     <style name="operatorbtnequal" parent="commonBtn">
 
         <item name="android:textColor">@color/white</item>
-<!--        <item name="backgroundTint">@drawable/background_fab</item>-->
-<!--        <item name="backgroundTint"/>#AAFFFFFF</item> &lt;!&ndash; Optional color tint &ndash;&gt;-->
+        <!--        <item name="backgroundTint">@drawable/background_fab</item>-->
+        <!--        <item name="backgroundTint"/>#AAFFFFFF</item> &lt;!&ndash; Optional color tint &ndash;&gt;-->
 
-        <item name="android:background">@drawable/button_background_fab</item> <!-- Use the layered drawable -->
+        <item name="android:background">@drawable/button_background_fab
+        </item> <!-- Use the layered drawable -->
 
 
     </style>
@@ -76,7 +78,6 @@
     </style>
 
 
-
     <style name="settingItem" parent="MaterialAlertDialog.Material3.Body.Text">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/Black</item>
@@ -85,20 +86,17 @@
     </style>
 
 
-
-
     <style name="RatingBarStyle" parent="Widget.AppCompat.RatingBar">
-<!--        color of non selected star-->
+        <!--        color of non selected star-->
         <item name="colorControlNormal">@color/limeclr</item>
 
-<!--        color of selected star-->
+        <!--        color of selected star-->
         <item name="colorControlActivated">@color/btnbackground2</item>
 
         <item name="android:progressDrawable">@drawable/custom_ratingbar</item>
         <item name="android:minHeight">48dp</item>
         <item name="android:maxHeight">48dp</item>
     </style>
-
 
 
     <style name="UnicornFilePickert.Mytheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -127,7 +125,6 @@
         <item name="unicorn.file.arrowIconTint">@color/unicorn_white</item>
         <item name="unicorn.file.selectionTint">@color/SecondPrimaryColor</item>
     </style>
-
 
 
     <style name="Theme.animation_style" parent="Theme.MaterialComponents.DayNight.NoActionBar">
