Again final before first publish

--- a/app/src/main/res/layout/content_open_gallery.xml
+++ b/app/src/main/res/layout/content_open_gallery.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.finalcalcihide.Activity.SelectImagesorVideos">
+    tools:context="com.demo.finalcalcihide.Activity.SelectImagesorVideos">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
