--- a/app/src/main/res/layout/custom_bottom_appbar.xml
+++ b/app/src/main/res/layout/custom_bottom_appbar.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/custom_btm_appbar_ori_txtV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Visibility"
+                    android:text="Visible"
                     android:textColor="@android:color/white" />
 
             </LinearLayout>
